--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
         -->
         <meta charset="UTF-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Jessica Woolard Portfolio</title>
+        <title>Jessica Woolard Portfolio | Full Stack Web Developer, Greenville SC</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
-        <meta name="Personal Portfolio website for Jessica Woolard" content="vCard & Resume Template"/>
-        <meta name="keywords" content="vcard, responsive, resume, personal, card, cv, cards, portfolio"/>
-        <meta name="Jessica" content="beshleyua"/>
+        <meta name="description" content="Jessica Woolard Full Stack Web Developer in Greenville SC. Currently focusing on Python, Django, REST, JavaScript, HTML, CSS"/>
+        <meta name="keywords" content="Jessica Woolard, Software, Programmer, Developer, Front-End, Full Stack Portfolio, Greenville, SC, South Carolina, Python, Django"/>
+        <meta name="author" content="Jessica Woolard"/>
 
         <!--
             Load Fonts
@@ -164,13 +164,11 @@
                                     class="fab fa-twitter"></span></a>
                             <a target="_blank" href="https://github.com/jessicawoolard"><span
                                     class="fab fa-github"></span></a>
-                            <!--<a target="_blank" href="https://www.spotify.com/"><span class="fab fa-spotify"></span></a>-->
-                            <!--<a target="_blank" href="https://stackoverflow.com/"><span class="fab fa-stack-overflow"></span></a>-->
                         </div>
 
                         <!-- profile buttons -->
                         <div class="lnks">
-                            <a href="files/resume.png" class="lnk" target="_blank">
+                            <a href="files/resume.pdf" class="lnk" target="_blank">
                                 <span class="text">Download Resume</span>
                                 <span class="ion ion-archive"></span>
                             </a>
@@ -203,13 +201,13 @@
                                 <div class="col col-d-12 col-t-12 col-m-12 border-line-v">
                                     <div class="text-box">
                                         <p>
-                                            Welcome! My name is Jessica Woolard and i just recently graduated from
+                                            Welcome! My name is Jessica Woolard and I just recently graduated from
                                             Carolina Code School as a Full Stack Web Developer in Greenville, South
                                             Carolina.
                                         </p>
                                         <p>
                                             Prior to becoming a full stack web developer, I received my Bachelor of
-                                            Science in Early Childhood Education at Mount Olive Unversity. I continued
+                                            Science in Early Childhood Education at Mount Olive University. I continued
                                             my education and received my MBA in Health Care Management in 2017. I
                                             decided to pursue a career in web development because I wanted a career
                                             change with more opportunity look forward to helping others on larger scale
@@ -468,7 +466,6 @@
                                         <div class="desc">
                                             <a href="https://fierce-shore-72613.herokuapp.com/"
                                                class="name has-popup-media">Calculator</a>
-                                            <!--<div class="category">Design</div>-->
                                         </div>
                                     </div>
                                 </div>
@@ -589,7 +586,7 @@
                     <div class="card-wrap">
 
                         <!--
-                            Conacts Info
+                            Contacts Info
                         -->
                         <div class="content contacts">
 
